<resources>
    <string name="app_name">Кванториум</string>
    <string name="exit">Выйти</string>
    <string name="enter">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="messenger">Мессенжер</string>
    <string name="home">Главная</string>
    <string name="news">Новости</string>
    <string name="teachers">Учителя</string>
    <string name="students">Ученики</string>
    <string name="password_hint">Пароль</string>
    <string name="password_hint_repeat">Повторите пароль</string>
    <string name="login_reg">Имя</string>
    <string name="login_enter">Имя</string>
    <string name="mail_reg">Email</string>
    <string name="profile_menu">Профиль</string>
</resources>