<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kartinka" />

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/gray"
        android:ems="10"
        android:hint="@string/mail_reg"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#888888"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/login2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/gray"
        android:ems="10"
        android:hint="@string/login_reg"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#888888"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/passwordt1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/gray"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#888888"
        app:layout_constraintEnd_toEndOf="@+id/login2"
        app:layout_constraintStart_toStartOf="@+id/login2"
        app:layout_constraintTop_toBottomOf="@+id/login2" />

    <EditText
        android:id="@+id/passwordt2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/gray"
        android:ems="10"
        android:hint="@string/password_hint_repeat"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#888888"
        app:layout_constraintEnd_toEndOf="@+id/passwordt1"
        app:layout_constraintStart_toStartOf="@+id/passwordt1"
        app:layout_constraintTop_toBottomOf="@+id/passwordt1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/regestration"
        android:gravity="center"
        android:onClick="Try_reg"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/passwordt2"
        app:layout_constraintStart_toStartOf="@+id/passwordt2"
        app:layout_constraintTop_toBottomOf="@+id/passwordt2" />

</androidx.constraintlayout.widget.ConstraintLayout>