<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    <LinearLayout
        android:id="@+id/linearLayout111"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:onClick="go_home"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton2111"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFF"
                android:onClick="go_home"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_home"
                tools:ignore="VectorDrawableCompat"
                tools:srcCompat="@drawable/ic_home" />

            <TextView
                android:id="@+id/textView4111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="go_home"
                android:text="@string/home"
                android:textColor="#0231A1"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:onClick="go_news"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton3111"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFF"
                android:onClick="go_news"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_news"
                tools:ignore="VectorDrawableCompat"
                tools:srcCompat="@drawable/ic_news" />

            <TextView
                android:id="@+id/textView5111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="go_news"
                android:text="@string/news"
                android:textColor="#0231A1"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:onClick="go_teachers"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageButton
                android:id="@+id/imageButton4111"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFF"
                android:onClick="go_teachers"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_teachers"
                tools:ignore="VectorDrawableCompat"
                tools:srcCompat="@drawable/ic_teachers" />

            <TextView
                android:id="@+id/textView6111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="go_teachers"
                android:text="@string/teachers"
                android:textColor="#0231A1"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton5111"
                tools:ignore="VectorDrawableCompat"
                tools:srcCompat="@drawable/ic_pupils"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFF"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_pupils" />

            <TextView
                android:id="@+id/textView7111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/students"
                android:textColor="#0231A1"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/vidvig111"
        android:layout_width="55dp"
        android:layout_height="145dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/menu"
        android:orientation="vertical"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:onClick="profile"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2111"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_profile"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/profile111111"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:gravity="left|center_vertical"
                android:text="@string/profile_menu"
                android:textColor="#000000"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:gravity="left|center_vertical"
            android:onClick="messenger"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6111"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_messenger"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/messenger111"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/messenger"
                android:textColor="#000000"
                android:textSize="14sp"
                android:visibility="gone"
                tools:text="@string/messenger" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:gravity="start|center_vertical"
            android:onClick="enter_click"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7111"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_login"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/enter_or_exit111"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/enter"
                android:textColor="#000000"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3111"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton111"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="#FFFFFF"
            android:onClick="onClick"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/kartinka"
            tools:srcCompat="@drawable/kartinka" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>